# tarumba

./: .gitignore  .pylintrc  Clipboard.py  CompressionDialog.py  CompressionManager.py  ConfigurationManager.py  DecryptDialog.py  DragNDrop.py  EncryptDialog.py  Executor.py  FixDialog.py  GettextLoader.py  Globals.py  JoinDialog.py  JoinZipDialog.py  MainFrame.py  MainFrameMenu.py  MimeIcons.py  PathDialog.py  README.md  SearchTools.py  SplitDialog.py  TODO  Tarumba.py  Temporary.py  TestDialog.py  TextInterface.py  TipOfTheDay.py  Utilities.py  hatch_build.py  pyproject.toml  requirements.txt  tarumba
.github/workflows/: build.yml  linting.yml  tests.yml
formats/: Compressor.py  Gzip.py  Rar.py  Tar.py  TarGzip.py  Zip.py
i18n/po/: en.po
icons/: README
moreControls/: AlternativeDirCtrl1.py  AlternativeTreeList1.py  ColorLogCtrl.py  CustomProgressDialog.py  CustomTreeListCtrl.py  DummyTreeList.py  MultiSelectionDirCtrl.py  OutputTextDialog.py
scripts/: Echo.py  FixGz.py  FixTar.py  NoOutput.py  Pipelines.py  RenameTar.py  RenameZip.py  StdoutToFile.py
src/tarumba/: __about__.py  __init__.py  __main__.py  classifier.py  cmd_parser.py  config.py  constants.py  data_classes.py  errors.py  executor.py  file_utils.py  manager.py  recompressor.py  utils.py
src/tarumba/backend/: _7z.py  ar.py  backend.py  bzip2.py  cpio.py  gzip.py  rar.py  tar.py  x7z.py  xz.py  zip.py
src/tarumba/format/: format.py  tar.py  zip.py
src/tarumba/gui/: console.py  gui.py
src/tarumba/locale/es/LC_MESSAGES/: tarumba.po
src/tarumba/locale/po/: es.po
tarumba/: __init__.py  __main__.py  cmd_parser.py  config.py  configuration.py  console.py  data_classes.py  executor.py  file_utils.py  manager.py  parser.py  utils.py
tarumba/format/: format.py  tar.py  zip.py
tarumba/gui/: __init__.py  console.py  gui.py
tarumba/locale/po/: es.po
tests/: test_7z_tar.py  test_archiver.py  test_backend.py  test_encryption.py  test_main.py  test_occurrence.py  test_output_formats.py  test_tar.py  test_tar_tar.py  test_zip.py  utils.py
