[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tarumba"
dynamic = ["version"]
description = 'The universal archive manager'
readme = "README.md"
requires-python = ">=3.8"
license = "GPL-3.0-or-later"
keywords = []
authors = [
  { name = "Félix Medrano" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
	'pexpect >= 4.0, < 5.0',
	'python-magic >= 0.4.0, < 0.5.0',
	'rich >= 13.0.0, < 14.0.0',
	'typing-extensions >= 4.0.0, < 5.0.0',
	'tzlocal >= 5.0, < 6.0'
]

[project.urls]
Documentation = "https://github.com/robertxgray/tarumba#readme"
Issues = "https://github.com/robertxgray/tarumba/issues"
Source = "https://github.com/robertxgray/tarumba"

[project.scripts]
tarumba = "tarumba.__main__:main"

[tool.hatch.version]
path = "src/tarumba/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pylint",
  "pytest",
  "pytest-mock"
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12", "3.13"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/tarumba tests}"

[tool.hatch.build]
exclude = ['src/tarumba/locale/*/LC_MESSAGE/*.po']
artifacts = ['src/tarumba/locale/*/LC_MESSAGES/*.mo']

[tool.hatch.build.hooks.custom]
dependencies = [
    "Babel>=2.6.0",
    "setuptools; python_version>='3.12'",
]

[tool.pytest.ini_options]
pythonpath = [
	"src"
]

[tool.coverage.run]
source_pkgs = ["tarumba", "tests"]
branch = true
parallel = true
omit = [
  "src/tarumba/__about__.py",
]

[tool.coverage.paths]
tarumba = ["src/tarumba", "*/tarumba/src/tarumba"]
tests = ["tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
